@@ -43,6 +43,8 @@ summary of the available cache components:
    - [CXCache]: uses PHP [XCache extension](http://xcache.lighttpd.net/).
 Note, this has been available since version 1.0.1.
 
+   - [CEAcceleratorCache]: uses PHP [EAccelerator extension](http://eaccelerator.net/).
+
    - [CDbCache]: uses a database table to store cached data. By default,
 it will create and use a SQLite3 database under the runtime directory. You
 can explicitly specify a database for it to use by setting its
