@@ -5,6 +5,7 @@
 Version 1.0.4 to be released
 ----------------------------
 - Bug: Setting the 'expression' option in an access url causes error (Qiang)
+- New #172: Add eAccelerator cache driver (Steffen)
 
 
 Version 1.0.3 March 1, 2009
